# kyokara

./: AGENTS.md  Cargo.toml  README.md  llms-full.txt  llms.txt
crates/api/: Cargo.toml
crates/api/src/: lib.rs
crates/api/tests/: api_tests.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/cli/tests/: check_emit_typed_ast.rs  package_examples.rs  parity_fixtures.rs  pattern_soundness_fixtures.rs  refactor_harness.rs  replay_execution.rs  replay_logging.rs  wasm_backend.rs  wasm_build.rs
crates/cli/tests/fixtures/: day20_h_id_outer.ky  day21_grid17_constant_repl.ky
crates/cli/tests/fixtures/parity/project_ambiguous_import_last_segment/: expect.json  main.ky  math.ky
crates/cli/tests/fixtures/parity/project_deep_private_chain_multi_module/: expect.json  main.ky  util_a.ky  util_b.ky
crates/cli/tests/fixtures/parity/project_force_subdir_only/: expect.json  main.ky
crates/cli/tests/fixtures/parity/project_import_local_rebinding_valid/: expect.json  main.ky
crates/cli/tests/fixtures/parity/project_import_private_helper_shadow_entry/: expect.json  main.ky  util.ky
crates/cli/tests/fixtures/parity/project_intrinsics_available_in_check_run/: expect.json  main.ky  math.ky
crates/cli/tests/fixtures/parity/project_parse_error_in_sibling/: bad.ky  expect.json
crates/cli/tests/fixtures/parity/project_shadow_pre_post_call_edges/: expect.json  main.ky
crates/cli/tests/fixtures/parity/single_collections_immutable_constructors_valid/: expect.json  main.ky
crates/cli/tests/fixtures/parity/single_collections_immutable_global_constructor_removed/: expect.json  main.ky
crates/cli/tests/fixtures/parity/single_constructor_value_expr_guard/: expect.json  main.ky
crates/cli/tests/fixtures/parity/single_duplicate_pattern_binding/: expect.json  main.ky
crates/cli/tests/fixtures/parity/single_field_access_expr_guard/: expect.json  main.ky
crates/cli/tests/fixtures/parity/single_intrinsics_available_in_check_run/: expect.json  main.ky
crates/cli/tests/fixtures/parity/single_invalid_numeric_underscore/: expect.json  main.ky
crates/cli/tests/fixtures/parity/single_lambda_param_shadow_call_edges/: expect.json  main.ky
crates/cli/tests/fixtures/parity/single_let_rebinding_valid/: main.ky
crates/cli/tests/fixtures/parity/single_list_binary_search_contract/: expect.json  main.ky
crates/cli/tests/fixtures/parity/single_list_binary_search_unsortable/: expect.json  main.ky
crates/cli/tests/fixtures/parity/single_list_index_out_of_bounds_runtime/: expect.json  main.ky
crates/cli/tests/fixtures/parity/single_local_let_statement_guard/: main.ky
crates/cli/tests/fixtures/parity/single_map_invalid_key_type/: expect.json  main.ky
crates/cli/tests/fixtures/parity/single_map_missing_key_runtime/: expect.json  main.ky
crates/cli/tests/fixtures/parity/single_math_gcd_lcm_valid/: expect.json  main.ky
crates/cli/tests/fixtures/parity/single_mixed_pos_named_duplicate_after_positional/: main.ky
crates/cli/tests/fixtures/parity/single_mixed_pos_named_unknown_after_positional/: expect.json  main.ky
crates/cli/tests/fixtures/parity/single_mixed_pos_named_valid/: expect.json  main.ky
crates/cli/tests/fixtures/parity/single_multi_segment_value_path/: expect.json  main.ky
crates/cli/tests/fixtures/parity/single_mutable_map_invalid_key_type/: main.ky
crates/cli/tests/fixtures/parity/single_mutable_map_missing_import/: main.ky
crates/cli/tests/fixtures/parity/single_mutable_map_valid/: main.ky
crates/cli/tests/fixtures/parity/single_mutable_map_with_capacity_valid/: main.ky
crates/cli/tests/fixtures/parity/single_mutable_priority_queue_invalid_priority/: expect.json  main.ky
crates/codegen/: Cargo.toml
crates/codegen/src/: error.rs  lib.rs  wasm.rs
crates/codegen/src/wasm/: alloc.rs  control.rs  func.rs  layout.rs  list.rs  seq.rs  string.rs  ty.rs
crates/codegen/tests/: codegen_tests.rs
crates/eval/: Cargo.toml
crates/eval/src/: env.rs  error.rs  interpreter.rs  intrinsics.rs  lib.rs  manifest.rs  runtime.rs  value.rs
crates/eval/tests/: eval_tests.rs  manifest_tests.rs  seq_streaming_short_circuit_tests.rs  seq_zip_streaming_unknown_tests.rs
crates/hir/: Cargo.toml
crates/hir-def/: Cargo.toml
crates/hir-def/src/: body.rs  builtins.rs  call_family.rs  expr.rs  item_tree.rs  lib.rs  module_graph.rs  name.rs  pat.rs  path.rs  resolver.rs  scope.rs  type_ref.rs
crates/hir-def/src/body/: lower.rs
crates/hir-def/src/item_tree/: lower.rs
crates/hir-def/tests/: lower_tests.rs
crates/hir-ty/: Cargo.toml
crates/hir-ty/src/: diagnostics.rs  effects.rs  exhaustiveness.rs  holes.rs  infer.rs  lib.rs  resolve.rs  ty.rs  unify.rs
crates/hir-ty/src/infer/: expr.rs  pat.rs
crates/hir-ty/tests/: infer_tests.rs  perf_hotspot_guards.rs
crates/hir/src/: lib.rs  project.rs
crates/kir/: Cargo.toml
crates/kir/src/: block.rs  build.rs  display.rs  function.rs  inst.rs  lib.rs  lower.rs  validate.rs  value.rs
crates/kir/src/lower/: expr.rs  pat.rs
crates/kir/tests/: kir_tests.rs  lower_tests.rs
crates/lsp/: Cargo.toml
crates/lsp/src/: code_action.rs  completion.rs  db.rs  diagnostics.rs  format.rs  goto_def.rs  hover.rs  lib.rs  position.rs  references.rs  server.rs
crates/pbt/: Cargo.toml
crates/pbt/src/: choice.rs  corpus.rs  generate.rs  lib.rs  report.rs  runner.rs  shrink.rs
crates/pbt/tests/: integration.rs
crates/pbt/tests/fixtures/: buggy_abs.ky  buggy_div.ky  mixed.ky  no_contracts.ky  passing.ky  property_fail.ky  property_pass.ky  refined_fail.ky  refined_mixed.ky  refined_pass.ky  refined_unsatisfiable.ky
crates/refactor/: Cargo.toml
crates/refactor/src/: lib.rs  quickfix.rs  rename.rs  transaction.rs
crates/refactor/tests/: refactor_tests.rs
crates/syntax/: Cargo.toml
crates/syntax/src/: ast.rs  bridge.rs  language.rs  lexer.rs  lib.rs
crates/syntax/src/ast/: nodes.rs  support.rs  traits.rs
crates/syntax/tests/: integration_tests.rs
crates/wasm-runtime/: Cargo.toml
crates/wasm-runtime/src/: lib.rs
crates/wasm-runtime/tests/: host_runtime.rs  runtime_runner.rs
docs/: INDEX.md  design-v0.md  (+5 more)
(+181 files in other folders)
