[package]
name = "kyokara-api"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
kyokara-stdx.workspace = true
kyokara-span.workspace = true
kyokara-intern.workspace = true
kyokara-diagnostics.workspace = true
kyokara-hir-def.workspace = true
kyokara-hir.workspace = true
kyokara-syntax.workspace = true
serde.workspace = true
serde_json.workspace = true
