[package]
name = "kyokara-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "kyokara"
path = "src/main.rs"

[dependencies]
kyokara-api.workspace = true
kyokara-refactor.workspace = true
kyokara-eval.workspace = true
kyokara-fmt.workspace = true
kyokara-hir.workspace = true
kyokara-lsp.workspace = true
kyokara-syntax.workspace = true
kyokara-diagnostics.workspace = true
clap.workspace = true
tokio.workspace = true
tracing.workspace = true
serde_json.workspace = true

[dev-dependencies]
tempfile.workspace = true
