[package]
name = "kyokara-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "kyokara"
path = "src/main.rs"

[dependencies]
kyokara-api.workspace = true
kyokara-refactor.workspace = true
kyokara-eval.workspace = true
kyokara-pbt.workspace = true
kyokara-fmt.workspace = true
kyokara-hir.workspace = true
kyokara-hir-ty.workspace = true
kyokara-kir.workspace = true
kyokara-codegen.workspace = true
kyokara-lsp.workspace = true
kyokara-runtime.workspace = true
kyokara-syntax.workspace = true
kyokara-wasm-runtime.workspace = true
kyokara-diagnostics.workspace = true
clap.workspace = true
tokio.workspace = true
tracing.workspace = true
serde_json.workspace = true
toml.workspace = true
semver.workspace = true

[dev-dependencies]
kyokara-runtime.workspace = true
tempfile.workspace = true

[lints]
workspace = true
