[package]
name = "kyokara-codegen"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
kyokara-stdx.workspace = true
kyokara-span.workspace = true
kyokara-intern.workspace = true
kyokara-hir-def.workspace = true
kyokara-hir-ty.workspace = true
kyokara-diagnostics.workspace = true
kyokara-kir.workspace = true
wasm-encoder.workspace = true
thiserror.workspace = true
rustc-hash.workspace = true
la-arena.workspace = true

[dev-dependencies]
kyokara-hir.workspace = true
wasmtime.workspace = true

[lints]
workspace = true
