[package]
name = "kyokara-hir-def"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
kyokara-stdx.workspace = true
kyokara-span.workspace = true
kyokara-intern.workspace = true
kyokara-syntax.workspace = true
kyokara-diagnostics.workspace = true
la-arena.workspace = true
rustc-hash.workspace = true
