[package]
name = "kyokara-hir-ty"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
kyokara-stdx.workspace = true
kyokara-span.workspace = true
kyokara-intern.workspace = true
kyokara-hir-def.workspace = true
kyokara-diagnostics.workspace = true
kyokara-syntax.workspace = true
la-arena.workspace = true
rustc-hash.workspace = true

[lints]
workspace = true
