[package]
name = "kyokara-hir"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
kyokara-stdx.workspace = true
kyokara-span.workspace = true
kyokara-intern.workspace = true
kyokara-hir-def.workspace = true
kyokara-hir-ty.workspace = true
kyokara-syntax.workspace = true
kyokara-diagnostics.workspace = true
kyokara-parser.workspace = true
rowan.workspace = true
toml.workspace = true

[lints]
workspace = true
