[package]
name = "kyokara-kir"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
kyokara-stdx.workspace = true
kyokara-span.workspace = true
kyokara-intern.workspace = true
kyokara-hir-def.workspace = true
kyokara-hir-ty.workspace = true
kyokara-diagnostics.workspace = true
la-arena.workspace = true
