[package]
name = "kyokara-lsp"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
kyokara-stdx.workspace = true
kyokara-span.workspace = true
kyokara-intern.workspace = true
kyokara-diagnostics.workspace = true
kyokara-parser.workspace = true
kyokara-syntax.workspace = true
kyokara-hir-def.workspace = true
kyokara-hir-ty.workspace = true
kyokara-hir.workspace = true
kyokara-fmt.workspace = true
kyokara-refactor.workspace = true
la-arena.workspace = true
rowan.workspace = true
text-size.workspace = true
rustc-hash.workspace = true
tower-lsp.workspace = true
salsa.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
futures = "0.3"
serde_json.workspace = true
tower = { version = "0.4", features = ["util"], default-features = false }
