[package]
name = "kyokara-refactor"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
kyokara-span.workspace = true
kyokara-intern.workspace = true
kyokara-diagnostics.workspace = true
kyokara-parser.workspace = true
kyokara-syntax.workspace = true
kyokara-hir-def.workspace = true
kyokara-hir-ty.workspace = true
kyokara-hir.workspace = true
rowan.workspace = true
text-size.workspace = true
tempfile.workspace = true
