[package]
name = "kyokara-syntax"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
kyokara-stdx.workspace = true
kyokara-span.workspace = true
kyokara-intern.workspace = true
kyokara-parser.workspace = true
rowan.workspace = true
logos.workspace = true
smol_str.workspace = true

[lints]
workspace = true
